# psp-jumpking

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  NOTES.md  test.py
assets/: README.md
scripts/: extract.sh
scripts/converter/: converter.py  requirements.txt  textures.json
scripts/level/: level.py  requirements.txt
scripts/levels/: levels.py
scripts/textures/: requirements.txt  textures.json  textures.py
src/: alloc.c  alloc.h  engine.c  engine.h  game.c  jki.c  jki.h  king.c  king.h  level.c  level.h  loader.c  loader.h  main.c  panic.c  panic.h  qoi.c  qoi.h  state.c  state.h  vram.c  vram.h
